deployment-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-demo-2
  labels:
    app: node-demo-2-server
    tier: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-demo-2-server
      tier: apps
  template:
    metadata:
      annotations:
        sidecar.istio.io/proxyCPU: 10m
        sidecar.istio.io/proxyMemory: 70Mi
      labels:
        app: node-demo-2-server
        tier: apps
    spec:
      containers:
        - name: node-demo
          image: miteshgangaramani/nodejs-image-demo:new4
          imagePullPolicy: Always
          command:
            - /bin/sh
            - -xec
            - node server.js
          ports:
            - containerPort: 8080
