lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-demo
spec:
  type: LoadBalancer
  selector:
    app: node-demo-server
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      name: http-node-demo
  sessionAffinity: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-demo
  labels:
    app: node-demo-server
    tier: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-demo-server
      tier: apps
  template:
    metadata:
      annotations:
        sidecar.istio.io/proxyCPU: 10m
        sidecar.istio.io/proxyMemory: 70Mi
      labels:
        app: node-demo-server
        tier: apps
    spec:
      containers:
        - name: node-demo
          image: miteshgangaramani/nodejs-image-demo:node-demo-130
          imagePullPolicy: Always
          command:
            - /bin/sh
            - -xec
            - cp /home/node/serverfile/server.js ./ && node server.js
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: server-conf
              mountPath: /home/node/serverfile
      volumes:
        - configMap:
            defaultMode: 420
            name: node-demo-config
          name: server-conf
