service-2.yml
apiVersion: v1
kind: Service
metadata:
  name: node-demo-2
  labels:
    tier: apps
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: http-node-demo-2
  selector:
    app: node-demo-2-server
    tier: apps
  sessionAffinity: None
  type: ClusterIP
