deployment-3.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-demo-main
  labels:
    tier: apps
spec:
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001
      name: http-node-demo-main
  selector:
    app: node-demo-server-main
    tier: apps
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-demo-main
  labels:
    app: node-demo-server-main
    tier: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-demo-server-main
      tier: apps
  template:
    metadata:
      annotations:
        sidecar.istio.io/proxyCPU: 10m
        sidecar.istio.io/proxyMemory: 70Mi
      labels:
        app: node-demo-server-main
        tier: apps
    spec:
      containers:
        - name: node-demo-main
          image: miteshgangaramani/nodejs-image-demo:http-main-demo
          imagePullPolicy: Always
          command:
            - /bin/sh
            - -xec
            - node http-index-server.js
          ports:
            - containerPort: 3001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: node-demo-main
spec:
  hosts:
    - "*"
  gateways:
    - nodejs-gateway
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: node-demo-main
            port:
              number: 3001
        #timeout: 300s
        #retries:
        #attempts: 3
        #perTryTimeout: 125s
        #retryOn: connect-failure,refused-stream,unavailable,cancelled,resource-exhausted,retriable-status-codes,gateway-error,5xx
