deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: node-demo
  labels:
    tier: apps
spec:
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001
      name: http-node-demo
  selector:
    app: node-demo-server
    tier: apps
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-demo
  labels:
    app: node-demo-server
    tier: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-demo-server
      tier: apps
  template:
    metadata:
      annotations:
        sidecar.istio.io/proxyCPU: 10m
        sidecar.istio.io/proxyMemory: 70Mi
      labels:
        app: node-demo-server
        tier: apps
    spec:
      containers:
        - name: node-demo
          image: miteshgangaramani/nodejs-image-demo:node-demo-as-root
          imagePullPolicy: Always
          command:
            - /bin/sh
            - -xec
            - cp /home/node/serverfile/server.js ./ && node server.js
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: server-conf
              mountPath: /home/node/serverfile
      volumes:
        - configMap:
            defaultMode: 420
            name: node-demo-config
          name: server-conf
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: node-demo
spec:
  hosts:
    - "*"
  gateways:
    - nodejs-gateway
  http:
    - match:
        - uri:
            exact: /node-demo
      route:
        - destination:
            host: node-demo
            port:
              number: 3001
      #timeout: 140s
      #retries:
        #attempts: 3
        #perTryTimeout: 130s
        #retryOn: connect-failure,refused-stream,unavailable,cancelled,resource-exhausted,retriable-status-codes,gateway-error,5xx
